A special class for the language has been created

--- a/res/layout/test_layout.xml
+++ b/res/layout/test_layout.xml
@@ -14,8 +14,8 @@
         android:layout_height="match_parent" >
 
         <ScrollView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:fillViewport="true"
             android:isScrollContainer="false" >
 
