--- a/res/layout/add_layout.xml
+++ b/res/layout/add_layout.xml
@@ -1,4 +1,6 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
@@ -11,12 +13,13 @@
         android:layout_height="match_parent" >
 
         <ScrollView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:fillViewport="true"
             android:isScrollContainer="false" >
 
             <RelativeLayout
+                android:id="@+id/adding_word"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" >
 
@@ -27,7 +30,7 @@
                     android:layout_marginBottom="35dp"
                     android:layout_marginTop="50dp"
                     layout="@layout/word_layout"
-                    android:orientation="vertical" />
+                    />
             </RelativeLayout>
         </ScrollView>
     </FrameLayout>
