--- a/res/layout/learn_layout.xml
+++ b/res/layout/learn_layout.xml
@@ -13,8 +13,8 @@
         android:layout_height="match_parent" >
 
         <ScrollView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:fillViewport="true"
             android:isScrollContainer="false" >
 
@@ -25,7 +25,7 @@
                 <com.example.furry_octo_waddle.activities.WrapContentViewPager
                     android:id="@+id/viewpager"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="300dp"
                     android:layout_marginBottom="35dp"
                     android:layout_marginTop="50dp" />
             </RelativeLayout>
